tests/baselines/reference/derivedClassOverridesProtectedMembers4.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(9,12): error TS2610: Class 'Base' defines instance member property 'a', so extended class 'Derived1' must provide an initializer with this override.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(12,7): error TS2415: Class 'Derived2' incorrectly extends base class 'Derived1'.
  Property 'a' is protected in type 'Derived2' but public in type 'Derived1'.
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts(13,15): error TS2610: Class 'Derived1' defines instance member property 'a', so extended class 'Derived2' must provide an initializer with this override.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassOverridesProtectedMembers4.ts (3 errors) ====
    var x: { foo: string; }
    var y: { foo: string; bar: string; }
    
    class Base {
        protected a: typeof x;
    }
    
    class Derived1 extends Base {
        public a: typeof x;
               ~
!!! error TS2610: Class 'Base' defines instance member property 'a', so extended class 'Derived1' must provide an initializer with this override.
    }
    
    class Derived2 extends Derived1 {
          ~~~~~~~~
!!! error TS2415: Class 'Derived2' incorrectly extends base class 'Derived1'.
!!! error TS2415:   Property 'a' is protected in type 'Derived2' but public in type 'Derived1'.
        protected a: typeof x; // Error, parent was public
                  ~
!!! error TS2610: Class 'Derived1' defines instance member property 'a', so extended class 'Derived2' must provide an initializer with this override.
    }